# hdoc

./: .hdoc.toml  README.md  meson.build
src/: hdoc-online-main.cpp  main.cpp  version.hpp
src/frontend/: Frontend.cpp
src/indexer/: Indexer.cpp  Indexer.hpp  MatcherUtils.cpp  Matchers.cpp
src/serde/: HTMLWriter.cpp  HTMLWriter.hpp
src/support/: ParallelExecutor.cpp  ParallelExecutor.hpp
tests/unit-tests/: test.cpp
